--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Engulf Signal Bot</title>
+  <title>Engulf Signal Bot v2.0</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
       text-align: center;
       padding: 20px;
-      background-color: #f4f4f4;
     }
     h1 {
       color: #333;
+    }
+    select, button {
+      font-size: 16px;
+      padding: 8px;
+      margin: 10px;
     }
     iframe {
       border: 2px solid #000;
@@ -23,22 +28,25 @@
       padding: 10px;
       height: 150px;
       overflow-y: scroll;
-      margin-top: 20px;
       text-align: left;
-    }
-    button {
-      padding: 10px 20px;
-      margin-top: 10px;
-      font-size: 16px;
-      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <h1>?? Engulf Signal Bot</h1>
-  <iframe src="https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=FX:EURUSD&width=100%&height=220&locale=en" width="100%" height="220"></iframe>
+  <h1>?? Engulf Signal Bot v2.0</h1>
 
-  <button onclick="generateSignal()">?? Check for Signal</button>
+  <label for="pair">Choose Pair:</label>
+  <select id="pair" onchange="updateChart()">
+    <option value="FX:EURUSD">EUR/USD</option>
+    <option value="FX:USDJPY">USD/JPY</option>
+    <option value="FX:GBPJPY">GBP/JPY</option>
+    <option value="FX:EURJPY">EUR/JPY</option>
+  </select>
+
+  <iframe id="chartFrame" width="100%" height="220" src="" allowtransparency="true" frameborder="0"></iframe>
+
+  <button onclick="generateSignal()">?? Auto Detect Signal</button>
+
   <div id="log"></div>
 
   <audio id="alertSound">
@@ -48,6 +56,11 @@
   <script>
     let total = 0, win = 0, loss = 0;
 
+    function updateChart() {
+      const pair = document.getElementById("pair").value;
+      document.getElementById("chartFrame").src = `https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=${pair}&width=100%&height=220&locale=en`;
+    }
+
     function generateSignal() {
       total++;
       const rand = Math.random();
@@ -56,13 +69,15 @@
 
       const logDiv = document.getElementById("log");
       const entry = document.createElement("div");
-      entry.textContent = `${new Date().toLocaleTimeString()} ? ${result}`;
+      entry.textContent = `${new Date().toLocaleTimeString()} | ${result} | Win: ${win} / ${total}`;
       logDiv.appendChild(entry);
       logDiv.scrollTop = logDiv.scrollHeight;
 
       document.getElementById("alertSound").play();
-      document.title = `?? Win: ${win} / ${total}`;
+      document.title = `? ${win} Wins / ${total} Trades`;
     }
+
+    updateChart(); // Set default chart
   </script>
 </body>
 </html>
