--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <option value="FX:EURJPY">EUR/JPY</option>
   </select>
 
-  <iframe id="chartFrame" width="100%" height="220" src="" allowtransparency="true" frameborder="0"></iframe>
+<iframe id="chartFrame" width="100%" height="260" frameborder="0"
+  src="https://s.tradingview.com/widgetembed/?symbol=FX:EURUSD&interval=1&theme=light&style=1&timezone=Etc/UTC&withdateranges=1&hideideas=1&hidelegend=1&autosize=true">
+</iframe>
 
   <button onclick="generateSignal()">?? Auto Detect Signal</button>
 
